# django-docker

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: django.yml
Dockerfiles/MySQL/: Dockerfile
Dockerfiles/Python/: Dockerfile
EC/: apps.py
config/: __init__.py  settings.py  test_settings.py  uwsgi.ini
ec/migrations/: 0001_initial.py
ec/models/: product.py
sample/: apps.py  models.py  signals.py  tests.py
sample/migrations/: 0001_initial.py  0002_auto_20210401_1329.py  0003_auto_20210401_1335.py  0004_company_deleted_at.py
sample2/: apps.py  models.py
sample2/fixtures/: Author.json  City.json  Entry.json
sample2/migrations/: 0001_initial.py  0002_city_name.py
sample3/: apps.py  models.py
sample3/fixtures/: Campaign.json  Creative.json
sample3/migrations/: 0001_initial.py
sample4/: apps.py  models.py
sample4/fixtures/: Book.json  FavoriteBook.json  Shop.json  User.json
sample4/migrations/: 0001_initial.py  0002_auto_20210701_0059.py  0003_user_name.py
sample5/: apps.py  factories.py  models.py  tests.py
sample5/migrations/: 0001_initial.py
